                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 19-04-2006 fixed: DVD-ROM bookmark could not be edited from the GUI.
 - 19-04-2006 fixed: Karaoke settings are now disabled when CDG reading is disabled.
 - 18-04-2006 fixed: Buffer overrun in FileZip::Read() when reading past the end of file.
 - 18-04-2006 fixed: italic ttf would render chopped of, off center and with invalid spacing.
 - 18-04-2006 fixed: subtitle style setting would display wrong under settings but respect whatever you set it to
 - 18-04-2006 fixed: various rar issues (including browsing dirs with incomplete files).
 - 18-04-2006 fixed: dvd bookmark button label in my programs.
 - 18-04-2006 updated: Finnish language file (Thnx to jutski)
 - 18-04-2006 changed: re-added the setting to change the charset from the GUI
 - 18-04-2006 fixed: tbn files with none ascii characters do not show up
 - 18-04-2006 updated: German language file (Thnx to sCAPe)
 - 18-04-2006 fixed: album info lookup
 - 18-04-2006 added: .FLV extension to XboxMediaCenter.xml
 - 17-04-2006 added: limited support for unloading dll's with debug symbols
 - 17-04-2006 updated: French language file
 - 16-04-2006 fixed: libsamba client didn't use nonblocking sockets during connection.. clienttimeout settings is now in xboxmediacenter.xml, defaults to 10 seconds
 - 16-04-2006 fixed: Webserver failed to play last.fm url's containing spaces (urlencoding).
 - 16-04-2006 fixed: Webserver failed to play asx url's.
 - 15-04-2006 changed: don't purge all samba connections on file close. (happened on each file when checking tags)
 - 15-04-2006 fixed: exception handling around our virtual filesystem to avoid exceptions propagating to main thread